crates/oxc_angular_compiler/tests/snapshots/integration_test__switch_inside_for.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
const _forTrack0 = ($index,$item) =>$item.id;
function TestComponent_For_1_Case_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Type A");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_For_1_Case_2_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Type B");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_For_1_Case_3_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵelementStart(1,"div");
    i0.ɵɵtext(2,"Unknown");
    i0.ɵɵelementEnd();
    i0.ɵɵtext(3," ");
  }
}
function TestComponent_For_1_Template(rf,ctx) {
  if ((rf & 1)) {
    i0.ɵɵtext(0," ");
    i0.ɵɵconditionalCreate(1,TestComponent_For_1_Case_1_Template,4,0)(2,TestComponent_For_1_Case_2_Template,
        4,0)(3,TestComponent_For_1_Case_3_Template,4,0);
    i0.ɵɵtext(4," ");
  }
  if ((rf & 2)) {
    let tmp_10_0;
    const item_r1 = ctx.$implicit;
    i0.ɵɵadvance();
    i0.ɵɵconditional((((tmp_10_0 = item_r1.type) === "a")? 1: ((tmp_10_0 === "b")? 2: 3)));
  }
}
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵrepeaterCreate(0,TestComponent_For_1_Template,5,1,null,null,_forTrack0); }
  if ((rf & 2)) { i0.ɵɵrepeater(ctx.items); }
}
