crates/oxc_angular_compiler/tests/snapshots/integration_test__template_reference.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) {
    const _r1 = i0.ɵɵgetCurrentView();
    i0.ɵɵelement(0,"input",null,0);
    i0.ɵɵelementStart(2,"button",1);
    i0.ɵɵlistener("click",function TestComponent_Template_button_click_2_listener() {
      i0.ɵɵrestoreView(_r1);
      const myInput_r2 = i0.ɵɵreference(1);
      return i0.ɵɵresetView(myInput_r2.focus());
    });
    i0.ɵɵelementEnd();
  }
}
