crates/oxc_angular_compiler/tests/snapshots/integration_test__void_element.snap
---
source: crates/oxc_angular_compiler/tests/integration_test.rs
expression: js
---
function TestComponent_Template(rf,ctx) {
  if ((rf & 1)) { i0.ɵɵelement(0,"input"); }
}
